# rolando

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  go.mod  go.sum  mise.toml  mix.exs
.memory-bank/: DNM_SPEC_v2.2.md  README.md  activeContext.md  architecture.md  migration-inventory.md  progress.md  projectBrief.md  techDecisions.md
.unused/: shared_weights.ex
.unused/markov/: redis_store.ex
.unused/native/: Cargo.toml
.unused/native/rolando_nif/src/: lib.rs
.unused/neural/: gru.ex  guild_model.ex  language_model.ex  nif.ex  quantizer.ex  shared_weights.ex  word_codebook.ex
.unused/persistence/: sqlite_adapter.ex  storage_provider.ex
.unused/preprocessing/: message_cleaner.ex  quality_gate.ex
apps/rolando/: .gitignore  README.md  mix.exs  nif_build.exs
apps/rolando_discord/: .gitignore  README.md  mix.exs
apps/rolando_web/: .gitignore  README.md  mix.exs
cache/: cache.conf  cache_markov.lua  docker-entrypoint-cache.sh
client/: .dockerignore  .env.development  Dockerfile  package.json  pnpm-lock.yaml  vite.config.mts
client/src/: components.d.ts  magic-types.d.ts  typed-router.d.ts
cmd/: main.go
cmd/data/: data.go
cmd/handlers/: buttons.go  commands.go  events.go  messages.go
config/: config.exs  config.go  dev.exs  prod.exs  runtime.exs  test.exs
container/: docker-compose.yml
memory-bank/: DISCORD_DNM_MIGRATION.md  activeContext.md  progress.md
redis/: docker-entrypoint-redis.sh  redis.conf  redis_markov.lua
server/: http_server.go
test/: main.go
(+265 files in other folders)
