[package]
name = "rolando_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "rolando_nif"
path = "rolando_nif/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32"
ndarray = "0.16"
rand = "0.8"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
